--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Index 4</title>
+  <title>Frrrozen Haute Chocolate</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
    
    
